# SoundBridge

./: .gitignore  CLAUDE.md  README.md  README.pt-BR.md  pyproject.toml  requirements.txt  soundbridge-client.bat
docs/: plano-implementacao-camera-windows-linux.md
soundbridge/: __init__.py  __main__.py  audio.py  config.py  gui.py  main.py  network.py  opus.py  protocol.py  state.py  video.py
tests/: conftest.py  test_audio.py  test_main.py  test_network.py  test_opus.py  test_protocol.py  test_state.py  test_video.py
