[project]
name = "soundbridge"
version = "0.1.0"
description = "LAN audio bridge between Linux and Windows"
requires-python = ">=3.12"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "customtkinter>=5.2.0",
    "pystray>=0.19.5",
    "pillow>=10.0.0",
    "pulsectl>=23.5.0; sys_platform == 'linux'",
]

[project.scripts]
soundbridge = "soundbridge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
